<resources>
    <string name="app_name">Shopper2</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_create_list">Create Shopping List</string>
    <string name="title_activity_create_list">Create Shopping List</string>
    <string name="name">Name:</string>
    <string name="store">Store:</string>
    <string name="date">Date:</string>
    <string name="title_activity_view_list">View List</string>
    <string name="delete">Delete Shopping List</string>
    <string name="action_add_item">Add Item</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity</string>
    <string name="title_activity_view_item">View Item</string>
</resources>
