<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nina.shopper2.ViewItem">
    <item
        android:id="@+id/delete_list"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:onClick="deleteShoppingListItem"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_list"
        android:orderInCategory="2"
        android:title="@string/action_create_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="3"
        android:title="@string/action_add_item"
        app:showAsAction="never" />
</menu>